# HitmanSniperChallengeSDK

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  launch.vs.json  vcpkg.json
HitmanSniperChallengeSDK/: CMakeLists.txt
HitmanSniperChallengeSDK/include/: Common.h  Global.h  Hash.h  Hooks.h  Logger.h  SDK.h
HitmanSniperChallengeSDK/include/Connection/: PipeServer.h
HitmanSniperChallengeSDK/include/Glacier/: IComponentInterface.h  ISharedPointerTarget.h  STokenID.h  ZGameLoopManager.h  ZGameTime.h  ZGameTimeManager.h  ZGraphicsSettingsManager.h  ZHM5BaseCharacter.h  ZHM5CrippleBox.h  ZLevelManager.h  ZSharedPointerTarget.h  ZString.h
HitmanSniperChallengeSDK/include/Glacier/Action/: ZHM5Action.h  ZHM5ActionManager.h
HitmanSniperChallengeSDK/include/Glacier/Actor/: ZActor.h  ZActorManager.h  (+1 more)
HitmanSniperChallengeSDK/include/IO/: BinaryReader.h  InputFileStream.h  InputMemoryStream.h
HitmanSniperChallengeSDK/include/Registry/: EnumRegistry.h  PropertyRegistry.h
HitmanSniperChallengeSDK/include/Resource/: DynamicHeaderLibraryGenerator.h
HitmanSniperChallengeSDK/include/Utility/: D3DUtils.h  MemoryUtility.h  ResourceUtility.h
HitmanSniperChallengeSDK/src/: Global.cpp  Hash.cpp  SDK.cpp  dllmain.cpp
HitmanSniperChallengeSDK/src/Glacier/: ZGameLoopManager.cpp  ZHM5CrippleBox.cpp
HitmanSniperChallengeSDK/src/Rendering/: D3D11Hooks.cpp  D3D11Hooks.h
HitmanSniperChallengeSDK/src/Resource/: DynamicHeaderLibraryGenerator.cpp
HitmanSniperChallengeSDK/src/UI/: MainMenu.cpp
HitmanSniperChallengeSDK/src/Utility/: MemoryUtility.cpp
(+155 files in other folders)
